--- a/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
+++ b/DumplingJump/DU/Resources/nibs/EquipmentViewLevelCell.xib
@@ -137,6 +137,7 @@
 								<string key="NSFrame">{{200, 42}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="171672305"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -238,12 +239,21 @@
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">didTapButton:</string>
+						<reference key="source" ref="443097978"/>
+						<reference key="destination" ref="734300500"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">48</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">unlock0</string>
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="1065978628"/>
 					</object>
-					<int key="connectionID">19</int>
+					<int key="connectionID">40</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -251,7 +261,7 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="281689530"/>
 					</object>
-					<int key="connectionID">20</int>
+					<int key="connectionID">41</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -259,7 +269,7 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="461955168"/>
 					</object>
-					<int key="connectionID">21</int>
+					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -267,7 +277,7 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="883569319"/>
 					</object>
-					<int key="connectionID">22</int>
+					<int key="connectionID">43</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -275,7 +285,7 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="1002729004"/>
 					</object>
-					<int key="connectionID">23</int>
+					<int key="connectionID">44</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -283,7 +293,7 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="707331371"/>
 					</object>
-					<int key="connectionID">24</int>
+					<int key="connectionID">45</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -291,7 +301,15 @@
 						<reference key="source" ref="734300500"/>
 						<reference key="destination" ref="411802563"/>
 					</object>
-					<int key="connectionID">25</int>
+					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">currentButton</string>
+						<reference key="source" ref="734300500"/>
+						<reference key="destination" ref="443097978"/>
+					</object>
+					<int key="connectionID">47</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -371,7 +389,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">EquipmentViewController</string>
+				<string key="-1.CustomClassName">EquipmentViewLevelCell</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -390,7 +408,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">48</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -403,75 +421,21 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">EquipmentViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="didBackButtonClicked:">id</string>
-						<string key="didContinueButtonClicked:">id</string>
-						<string key="didStoreButtonClicked:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="didBackButtonClicked:">
-							<string key="name">didBackButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="didContinueButtonClicked:">
-							<string key="name">didContinueButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="didStoreButtonClicked:">
-							<string key="name">didStoreButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backButton">UIButton</string>
-						<string key="backgroundView">UIView</string>
-						<string key="bottomImage">UIImageView</string>
-						<string key="continueButton">UIButton</string>
-						<string key="starIcon">UIImageView</string>
-						<string key="starNumLabel">UILabel</string>
-						<string key="storeButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backButton">
-							<string key="name">backButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="backgroundView">
-							<string key="name">backgroundView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bottomImage">
-							<string key="name">bottomImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="continueButton">
-							<string key="name">continueButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="starIcon">
-							<string key="name">starIcon</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="starNumLabel">
-							<string key="name">starNumLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="storeButton">
-							<string key="name">storeButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EquipmentViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">EquipmentViewLevelCell</string>
 					<string key="superclassName">DUTableViewCell</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">didTapButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">didTapButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">didTapButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="currentButton">UIButton</string>
 						<string key="descriptionLabel">UILabel</string>
 						<string key="equipmentImageView">UIImageView</string>
 						<string key="priceLabel">UILabel</string>
@@ -481,6 +445,10 @@
 						<string key="unlock3">UIImageView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="currentButton">
+							<string key="name">currentButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="descriptionLabel">
 							<string key="name">descriptionLabel</string>
 							<string key="candidateClassName">UILabel</string>
